--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,10 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "noImplicitAny": false,
+    "moduleResolution": "node"
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
+    "src/**/*.js",
   ]
 }
