--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-typescript": "^8.1.0",
     "babel-loader": "^8.2.2",
+    "core-js": "^2.6.12",
     "rollup": "^2.35.1",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3"
