--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
-    "module": "ES2015",
+    "target": "esnext",
+    "module": "esnext",
     "strict": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
