--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "noImplicitAny": false,
+    "allowJs": true,
     "moduleResolution": "node"
   },
   "include": [
